2009-09-14  Dan Nicolaescu  <dann@ics.uci.edu>

	* bindings.el (mode-line-mode-menu): Add purecopy calls for :help.
	* help.el (help-for-help-internal): Add purecopy calls for text.

	* vc.el (top): print-log method now takes an optional SHORTLOG
	argument.  Add a new method: root.
	(vc-root-diff, vc-print-root-log): New functions.
	(vc-log-short-style): New variable.
	(vc-print-log-internal): Add support for showing short logs.

	* vc-hooks.el (vc-prefix-map, vc-menu-map): Add bindings for
	vc-print-root-log and vc-print-root-diff.

	* vc-bzr.el (vc-bzr-log-view-mode, vc-bzr-print-log):
	* vc-git.el (vc-git-print-log, vc-git-log-view-mode):
	* vc-hg.el (vc-hg-print-log, vc-hg-log-view-mode): Add support for
	short logs.

	* vc-cvs.el (vc-cvs-print-log):
	* vc-mtn.el (vc-mtn-print-log):
	* vc-rcs.el (vc-rcs-print-log):
	* vc-sccs.el (vc-sccs-print-log):
	* vc-svn.el (vc-svn-print-log): Add an optional argument shortlog
	that is ignored for now.

	* vc-mtn.el (vc-mtn-annotate-command):
	* vc-svn.el (vc-svn-annotate-command): Run asynchronously.

2009-09-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* simple.el: Add mapping for backspace/delete/clear/tab/escape/return
	to function-key-map, and give them ascii-character property.
	* term/x-win.el (x-alternatives-map):
	* term/ns-win.el (ns-alternatives-map):
	* term/internal.el (msdos-key-remapping-map):
	* w32-fns.el (x-alternatives-map): Remove redundant mappings.

2009-09-14  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/elint.el (elint-add-required-env): Revert to not using
	temp-buffers (2009-09-12).

2009-09-13  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/ispell.el (ispell-command-loop): Improve last fix, using
	the new read-key function.

2009-09-13  Chong Yidong  <cyd@stupidchicken.com>

	* term/x-win.el (x-menu-bar-open): Only call accelerate-menu if it
	is defined (Bug#4405).

2009-09-13  Vincent Belaïche  <vincent.belaiche@gmail.com>

	* recentf.el (recentf-cleanup): Use a hash table to find