@@ -1,3 +1,7 @@
+2009-09-15  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* vc-git.el (vc-git-dir-extra-headers): Show the remote location.
+
 2009-09-14  Dan Nicolaescu  <dann@ics.uci.edu>
 
 	* bindings.el (mode-line-mode-menu): Add purecopy calls for :help.
